--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,7 +9,8 @@
   "auth": {
     "oidc": {
       "clientId": "bats",
-      "callbackPath": "/auth/cb"
+      "callbackPath": "/auth/cb",
+      "signedOutCallbackPath": "/signout/complete"
     }
   }
 }
