--- a/src/package.json
+++ b/src/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "govuk_frontend_toolkit": "^7.2.0",
-    "govuk-elements-sass": "^3.1.2"
+    "govuk-elements-sass": "^3.1.2",
+    "govuk_template_jinja": "^0.24.0"
   },
   "devDependencies": {
     "grunt": "^1.0.2",
     "grunt-cli": "^1.2.0",
-    "grunt-sass": "^2.1.0"
+    "grunt-sass": "^2.1.0",
+    "grunt-contrib-copy": "^1.0.0"
   }
 }
