Factor out register callback path into configuration

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
 
+  "register": {
+    // Users returning from registration on DfE Sign-in will arrive here.
+    // This url has to be registered with DfE Sign-in to be allowed,
+    // so don't change it without getting the new path registered with DfE Sign-in.
+    "registrationCallbackPath": "register/complete"
+  },
   "auth": {
     "oidc": {
       "clientId": "bats",
