--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,9 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
+  "engines": {
+    "node": ">=8.11.2"
+  },
   "dependencies": {
     "govuk_frontend_toolkit": "^7.2.0",
     "govuk-elements-sass": "^3.1.2",
