--- a/src/package.json
+++ b/src/package.json
@@ -15,5 +15,8 @@
     "grunt-cli": "^1.2.0",
     "grunt-sass": "^2.1.0",
     "grunt-contrib-copy": "^1.0.0"
+  },
+  "scripts": {
+    "generate": "grunt"
   }
 }
