Added logger and Api connection details

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -15,5 +15,8 @@
   "url": {
     "site": "https://localhost:44364",
     "register": "https://signin-test-pfl-as.azurewebsites.net/register"
+  },
+  "ApiConnection": {
+    "Uri": "http://localhost:6001/api/"
   }
 }
