--- a/src/api-client/ApiClient.csproj
+++ b/src/api-client/ApiClient.csproj
@@ -10,7 +10,7 @@
 
   <Target Name="NSwag" BeforeTargets="Compile">
     <Copy SourceFiles="@(Reference)" DestinationFolder="$(OutDir)References" />
-    <Exec Command="$(NSwagExe_Core20) swagger2csclient /input:manage-courses-api-swagger.json /classname:ManageCoursesApiClient /namespace:GovUk.Education.ManageCourses.ApiClient /output:Generated\ManageCoursesApiClient.cs" />
+    <Exec Command="$(NSwagExe_Core20) swagger2csclient /input:manage-courses-api-swagger.json /classname:ManageCoursesApiClient /namespace:GovUk.Education.ManageCourses.ApiClient.Generated /output:Generated\ManageCoursesApiClient.cs" />
     <RemoveDir Directories="$(OutDir)References" />
   </Target>
 
