--- a/src/api-client/ApiClient.csproj
+++ b/src/api-client/ApiClient.csproj
@@ -10,7 +10,17 @@
 
   <Target Name="NSwag" BeforeTargets="Compile">
     <Copy SourceFiles="@(Reference)" DestinationFolder="$(OutDir)References" />
-    <Exec Command="$(NSwagExe_Core20) swagger2csclient /input:manage-courses-api-swagger.json /classname:ManageCoursesApiClient /namespace:GovUk.Education.ManageCourses.ApiClient.Generated /output:Generated\ManageCoursesApiClient.cs" />
+    <PropertyGroup>
+      <InputSwaggerJson Condition="$(InputSwaggerJson) == ''">manage-courses-api-swagger.json</InputSwaggerJson>
+      <OutputSwaggerGeneration Condition="$(OutputSwaggerGeneration) == ''">Generated\ManageCoursesApiClient.cs</OutputSwaggerGeneration>
+    </PropertyGroup>
+
+    <PropertyGroup>
+      <classname>ManageCoursesApiClient</classname>
+      <namespace>$(RootNamespace).Generated</namespace>
+    </PropertyGroup>
+
+    <Exec Command="$(NSwagExe_Core20) swagger2csclient /input:$(InputSwaggerJson) /output:$(OutputSwaggerGeneration) /classname:$(classname) /namespace:$(namespace)" />
     <RemoveDir Directories="$(OutDir)References" />
   </Target>
 
