Configurable API url

--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -17,6 +17,6 @@
     "register": "https://signin-test-pfl-as.azurewebsites.net/register"
   },
   "ApiConnection": {
-    "Uri": "http://localhost:6001/api/"
+    "Url": "http://localhost:6001"
   }
 }
