--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -17,6 +17,6 @@
     "register": "https://signin-test-pfl-as.azurewebsites.net/register"
   },
   "ApiConnection": {
-    "Url": "http://localhost:6001"
+    "Url": "http://manage-courses-api-bat-development.e4ff.pro-eu-west-1.openshiftapps.com/"
   }
 }
