Provide ability to inject bearer token into API call headers
Splitting up Sau's commit into unrelated changes, and modifying to keep base url injection intact.

Remove try from service registration - "Add" has marginally less confusing behaviour - https://stackoverflow.com/a/48187842

--- a/src/api-client/ApiClient.csproj
+++ b/src/api-client/ApiClient.csproj
@@ -18,9 +18,11 @@
     <PropertyGroup>
       <classname>ManageCoursesApiClient</classname>
       <namespace>$(RootNamespace)</namespace>
+      <clientBaseClass>$(namespace).ManageCoursesApiClientBase</clientBaseClass>
+      <configurationClass>$(namespace).IManageCoursesApiClientConfiguration</configurationClass>
     </PropertyGroup>
 
-    <Exec Command="$(NSwagExe_Core20) swagger2csclient /input:$(InputSwaggerJson) /output:$(OutputSwaggerGeneration) /classname:$(classname) /namespace:$(namespace)" />
+    <Exec Command="$(NSwagExe_Core20) swagger2csclient /input:$(InputSwaggerJson) /output:$(OutputSwaggerGeneration) /classname:$(classname) /namespace:$(namespace) /clientBaseClass:$(clientBaseClass) /configurationClass:$(configurationClass)" />
     <RemoveDir Directories="$(OutDir)References" />
   </Target>
 
