--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -11,10 +11,10 @@
     "govuk_template_jinja": "^0.24.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.2",
+    "grunt": "^1.0.3",
     "grunt-cli": "^1.2.0",
-    "grunt-sass": "^2.1.0",
-    "grunt-contrib-copy": "^1.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-sass": "^3.0.0"
   },
   "scripts": {
     "generate": "grunt"
