--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -14,7 +14,8 @@
     "grunt": "^1.0.3",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-sass": "^3.0.0"
+    "grunt-sass": "^3.0.0",
+    "node-sass": "^4.9.0"
   },
   "scripts": {
     "generate": "grunt"
