--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -14,7 +14,7 @@
   },
   "url": {
     "site": "https://localhost:44364",
-    "register": "https://signin-test-pfl-as.azurewebsites.net/register"
+    "profile": "https://signin-test-pfl-as.azurewebsites.net"
   },
   "ApiConnection": {
     "Url": "http://localhost:6001/"
