sheer desperation at this point

--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <Target Name="Grunt" Condition="'$(Configuration)'=='Release'" BeforeTargets="AfterBuild">
-    <Exec Command="npm install -g n" />
-    <Exec Command="n stable" />
+    <Exec Command="npm install n" />
+    <Exec Command="node_modules/n/bin/n stable" />
     <Exec Command="npm install" />
     <Exec Command="npm run generate" />
   </Target>
