--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,9 +1,11 @@
 {
   "version": "1.0.0",
-  "name": "asp.net",
+  "name": "managing-courses-ui",
+  "license": "MIT",
   "private": true,
   "engines": {
-    "node": ">=8.11.2"
+    "node": "6.11.3",
+    "npm": "3.10.10"
   },
   "scripts": {
     "generate": "gulp generate-assets",
@@ -11,11 +13,12 @@
   },
   "dependencies": {
     "govuk-frontend": "^1.0.0",
-    "gulp": "^4.0.0",
-    "gulp-clean": "^0.4.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-copy": "^1.1.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "3.1.0",
     "gulp-sourcemaps": "^2.6.4",
-    "require-dir": "^1.0.0"
+    "require-dir": "^1.0.0",
+    "run-sequence": "^1.2.2"
   }
 }
