--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -4,21 +4,22 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "8.11.3",
+    "node": ">= 8.9.4",
     "npm": "5.6.0"
   },
   "scripts": {
     "generate": "gulp generate-assets",
     "clean": "gulp clean"
   },
-  "dependencies": {
-    "govuk-frontend": "1.1.1",
-    "gulp": "3.9.1",
-    "gulp-clean": "0.3.2",
-    "gulp-copy": "1.1.0",
-    "gulp-sass": "3.1.0",
-    "gulp-sourcemaps": "2.6.4",
-    "require-dir": "1.0.0",
-    "run-sequence": "1.2.2"
+  "devDependencies": {
+    "govuk-frontend": "^1.1.1",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-copy": "^1.1.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "node-sass": "^4.9.0",
+    "require-dir": "^1.0.0",
+    "run-sequence": "^2.2.1"
   }
 }
