--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -20,8 +20,10 @@
     <Content Remove="wwwroot\.gitkeep" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\api-client\ApiClient.csproj" />
+  <Import Condition="Exists('$(ProjectDir)dev.targets')" Project="$(ProjectDir)dev.targets" />
+  
+  <ItemGroup Condition="Exists('$(ProjectDir)dev.targets')==false">
+    <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.1.1.*" />
   </ItemGroup>
 
   <!--<Target Name="Grunt" Condition="'$(Configuration)'=='Release'" BeforeTargets="AfterBuild">
