umm... make travis actually build the service, and maybe run tests?

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ mono: none
 dotnet: 2.0.0
 script:
 - dotnet restore
+- dotnet build
+- dotnet test ManageCoursesUi.Tests
 env:
   global:
     # AZURE_WA_PASSWORD
