--- a/ManageCoursesUi.Tests/ManageCoursesUi.Tests.csproj
+++ b/ManageCoursesUi.Tests/ManageCoursesUi.Tests.csproj
@@ -11,7 +11,11 @@
     <PackageReference Include="Moq" Version="4.9.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
