--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -1,32 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>manage-courses-ui-config</UserSecretsId>
     <RootNamespace>GovUk.Education.ManageCourses.Ui</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="3.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
   </ItemGroup>
-
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2" />
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Content Remove="wwwroot\.gitkeep" />
   </ItemGroup>
-
   <Import Condition="Exists('$(ProjectDir)dev.targets')" Project="$(ProjectDir)dev.targets" />
-  
   <ItemGroup Condition="Exists('$(ProjectDir)dev.targets')==false">
     <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.3.0-enrichment-organisation" />
   </ItemGroup>
-
   <!--<Target Name="Grunt" Condition="'$(Configuration)'=='Release'" BeforeTargets="AfterBuild">
     <Exec Command="npm install" />
     <Exec Command="npm run generate" />
