Fixed missing dev config

--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -9,7 +9,8 @@
   },
   "auth": {
     "oidc": {
-      "metadataAddress": "https://signin-test-oidc-as.azurewebsites.net/.well-known/openid-configuration"
+      "metadataAddress": "https://signin-test-oidc-as.azurewebsites.net/.well-known/openid-configuration",
+      "tokenEndpoint" : "https://signin-test-oidc-as.azurewebsites.net/token"
     }
   },
   "url": {
