--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -21,8 +21,8 @@
   <ItemGroup Condition="Exists('$(ProjectDir)dev.targets')==false">
     <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.4.1" />
   </ItemGroup>
-  <!--<Target Name="Grunt" Condition="'$(Configuration)'=='Release'" BeforeTargets="AfterBuild">
+  <Target Name="Webpack" Condition="'$(Configuration)'=='Release'" BeforeTargets="AfterBuild">
     <Exec Command="npm install" />
-    <Exec Command="npm run generate" />
-  </Target>-->
+    <Exec Command="npm run build" />
+  </Target>
 </Project>
