hotfix: add logging

--- a/src/ui/appsettings.json
+++ b/src/ui/appsettings.json
@@ -15,5 +15,30 @@
       "callbackPath": "/auth/cb",
       "signedOutCallbackPath": "/signout/complete"
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Trace" ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:o} {Level:u3} {SourceContext:000}] {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Trace",
+        "Args": {
+          "outputTemplate": "[{Timestamp:o} {Level:u3} {SourceContext:000}] {Message:lj} {NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
