--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -12,6 +12,10 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2" />
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="2.6.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
@@ -21,7 +25,7 @@
   <ItemGroup Condition="Exists('$(ProjectDir)dev.targets')==false">
     <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.4.1" />
   </ItemGroup>
-  <Target Name="Webpack" Condition="'$(Configuration)'=='Release'" BeforeTargets="AfterBuild">
+  <Target Name="Webpack" BeforeTargets="AfterBuild">
     <Exec Command="npm install" />
     <Exec Command="npm run build" />
   </Target>
