--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "form-serialize": "^0.7.2",
     "govuk-frontend": "^1.1.1",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.3",
