--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -18,15 +18,17 @@
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="2.6.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
-    <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.1.0-extract-details-view.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Content Remove="wwwroot\.gitkeep" />
   </ItemGroup>
-  <Import Condition="Exists('$(ProjectDir)dev.targets')" Project="$(ProjectDir)dev.targets" />
+  <Import Condition="Exists('$(ProjectDir)dev-mc-api.targets')" Project="$(ProjectDir)dev.targets" />
   <ItemGroup Condition="Exists('$(ProjectDir)dev.targets')==false">
     <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.7.0" />
+  </ItemGroup>
+  <ItemGroup Condition="Exists('$(ProjectDir)dev-sc-shared.targets')==false">    
+    <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.1.0-extract-details-view.1" />
   </ItemGroup>
   <Target Name="Webpack" BeforeTargets="AfterBuild">
     <Exec Command="npm install" />
