--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -23,15 +23,17 @@
     <Folder Include="wwwroot\" />
     <Content Remove="wwwroot\.gitkeep" />
   </ItemGroup>
-  <Import Condition="Exists('$(ProjectDir)dev-mc-api.targets')" Project="$(ProjectDir)dev.targets" />
-  <ItemGroup Condition="Exists('$(ProjectDir)dev.targets')==false">
-    <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.7.0" />
+  <Import Condition="Exists('$(ProjectDir)dev-mc-api.targets')" Project="$(ProjectDir)dev-mc-api.targets" />
+  <Import Condition="Exists('$(ProjectDir)dev-sc-shared.targets')" Project="$(ProjectDir)dev-sc-shared.targets" />
+
+  <ItemGroup Condition="Exists('$(ProjectDir)dev-mc-api.targets')==false">
+    <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.8.1-retrieve-ucas-inst" />
   </ItemGroup>
   <ItemGroup Condition="Exists('$(ProjectDir)dev-sc-shared.targets')==false">    
-    <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.1.0-extract-details-view.1" />
+    <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.1.0-extract-details-view.3" />
   </ItemGroup>
   <Target Name="Webpack" BeforeTargets="AfterBuild">
-    <Exec Command="npm install" />
-    <Exec Command="npm run build" />
+    <!-- <Exec Command="npm install" />
+    <Exec Command="npm run build" /> -->
   </Target>
 </Project>
