--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -33,7 +33,7 @@
     <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.1.0-extract-details-view.2" />
   </ItemGroup>
   <Target Name="Webpack" BeforeTargets="AfterBuild">
-    <!-- <Exec Command="npm install" />
-    <Exec Command="npm run build" /> -->
+    <Exec Command="npm install" />
+    <Exec Command="npm run build" />
   </Target>
 </Project>
