--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -12,22 +12,22 @@
     "build": "webpack -p --mode production"
   },
   "devDependencies": {
-    "aspnet-webpack": "^3.0.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "form-serialize": "^0.7.2",
-    "govuk-frontend": "^1.1.1",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-hot-middleware": "^2.22.3"
+    "aspnet-webpack": "3.0.0",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-preset-es2015": "6.24.1",
+    "copy-webpack-plugin": "4.5.2",
+    "css-loader": "1.0.0",
+    "form-serialize": "0.7.2",
+    "govuk-frontend": "1.1.1",
+    "mini-css-extract-plugin": "0.4.1",
+    "node-sass": "4.9.3",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.22.1",
+    "uglifyjs-webpack-plugin": "1.3.0",
+    "webpack": "4.16.5",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.5",
+    "webpack-hot-middleware": "2.22.3"
   }
 }
