--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -20,6 +20,7 @@
     "css-loader": "1.0.0",
     "form-serialize": "0.7.2",
     "govuk-frontend": "1.3.0",
+    "html5shiv": "^3.7.3",
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.3",
     "sass-loader": "7.1.0",
