Added feature flag

--- a/src/ui/appsettings.json
+++ b/src/ui/appsettings.json
@@ -40,5 +40,10 @@
       }
     ],
     "Enrich": [ "FromLogContext" ]
+  },
+  "features": {
+    "FEATURE_ORG_ENRICHMENT": "true",
+    "FEATURE_SEND_TO_SEARCH_AND_COMPARE": "true"
+  }
   }
 }
