--- a/src/ui/ManageCoursesUi.csproj
+++ b/src/ui/ManageCoursesUi.csproj
@@ -32,7 +32,7 @@
     <PackageReference Include="GovUk.Education.ManageCourses.ApiClient" Version="0.20.0.*" />
   </ItemGroup>
   <ItemGroup Condition="Exists('$(ProjectDir)dev-sc-shared.targets')==false">
-    <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.5.0-put-back-apply.0" />
+    <PackageReference Include="GovUk.Education.SearchAndCompare.Ui.Shared" Version="0.5.0.*" />
   </ItemGroup>
   <Target Name="Webpack" BeforeTargets="AfterBuild">
     <Exec Command="npm install" />
