--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -9,11 +9,14 @@
   },
   "scripts": {
     "dev": "webpack --mode development",
-    "build": "webpack -p --mode production"
+    "build": "webpack -p --mode production",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "aspnet-webpack": "3.0.0",
     "babel-core": "6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-loader": "7.1.5",
     "babel-preset-es2015": "6.24.1",
     "copy-webpack-plugin": "4.5.2",
@@ -21,8 +24,10 @@
     "form-serialize": "0.7.2",
     "govuk-frontend": "1.3.0",
     "html5shiv": "^3.7.3",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.3",
+    "regenerator-runtime": "^0.12.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.22.1",
     "uglifyjs-webpack-plugin": "1.3.0",
