--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -17,7 +17,5 @@
     "site": "https://localhost:44364",
     "profile": "https://signin-test-pfl-as.azurewebsites.net"
   },
-  "ApiConnection": {
-    "Url": "http://localhost:6001/"
-  }
+  "API_URL": "http://localhost:6001/"
 }
