Changed title in the correct place

--- a/src/ui/app_offline.htm.example
+++ b/src/ui/app_offline.htm.example
@@ -665,7 +665,7 @@
         </div>
         <div class="govuk-header__content">
           <a href="/" class="govuk-header__link govuk-header__link--service-name">
-            Find postgraduate teacher training
+            Manage Courses
           </a>
         </div>
       </div>
