--- a/src/ui/app_offline.htm.example
+++ b/src/ui/app_offline.htm.example
@@ -3,7 +3,7 @@
 <html lang="en" class="govuk-template">
   <head>
     <meta charset="utf-8" />
-    <title>Manage Courses - GOV.UK</title>
+    <title>Publish teacher training courses - GOV.UK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0b0c0c" />
 
@@ -665,7 +665,7 @@
         </div>
         <div class="govuk-header__content">
           <a href="/" class="govuk-header__link govuk-header__link--service-name">
-            Manage Courses
+            Publish teacher training courses
           </a>
         </div>
       </div>
