[1019] Create frontend URL helper

--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -15,7 +15,8 @@
   },
   "url": {
     "site": "https://localhost:44364",
-    "profile": "https://signin-test-pfl-as.azurewebsites.net"
+    "profile": "https://signin-test-pfl-as.azurewebsites.net",
+    "frontend": "https://localhost:1234"
   },
   "API_URL": "https://bat-dev-manage-courses-api-app.azurewebsites.net/"
 }
