--- a/src/ui/appsettings.Development.json
+++ b/src/ui/appsettings.Development.json
@@ -15,8 +15,11 @@
   },
   "url": {
     "site": "https://localhost:44364",
-    "profile": "https://signin-test-pfl-as.azurewebsites.net",
-    "frontend": "https://localhost:1234"
+    "profile": "https://signin-test-pfl-as.azurewebsites.net"
   },
-  "API_URL": "https://bat-dev-manage-courses-api-app.azurewebsites.net/"
+  "ManageCourses": {
+    "FrontendBaseUrl": "https://localhost:3000"
+  },
+  "API_URL": "https://bat-dev-manage-courses-api-app.azurewebsites.net/",
+  "FEATURE_FRONTEND_ORGANISATION_SHOW": "true"
 }
